3.5.0/_sources/gallery/axisartist/simple_axisline3.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/axisartist/simple_axisline3.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_axisartist_simple_axisline3.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_axisartist_simple_axisline3.py:


================
Simple Axisline3
================

.. GENERATED FROM PYTHON SOURCE LINES 7-18



.. image-sg:: /gallery/axisartist/images/sphx_glr_simple_axisline3_001.png
   :alt: simple axisline3
   :srcset: /gallery/axisartist/images/sphx_glr_simple_axisline3_001.png, /gallery/axisartist/images/sphx_glr_simple_axisline3_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt
    from mpl_toolkits.axisartist.axislines import Axes

    fig = plt.figure(figsize=(3, 3))

    ax = fig.add_subplot(axes_class=Axes)

    ax.axis["right"].set_visible(False)
    ax.axis["top"].set_visible(False)

    plt.show()


.. _sphx_glr_download_gallery_axisartist_simple_axisline3.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: simple_axisline3.py <simple_axisline3.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: simple_axisline3.ipynb <simple_axisline3.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
